force-app/main/default/objects/Agreement__c/fields/NetGain_Update_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>NetGain_Update_Status_Message__c</fullName>
    <label>NetGain Update Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>