force-app/main/default/objects/Agreement__c/fields/NetSuite_External_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>NetGain External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>