force-app/main/default/objects/Agreement__c/fields/NetSuite_Total_Commenced__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Total_Commenced__c</fullName>
    <label>NetSuite Total Commenced</label>
    <summarizedField>LeaseNetLineItem__c.Current_Amount__c</summarizedField>
    <summaryForeignKey>LeaseNetLineItem__c.Agreement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>