force-app/main/default/objects/Agreement__c/fields/New_FA__c.field-meta.xml
<CustomField>
    <fullName>New_FA__c</fullName>
    <formula>Project__r.X1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New FA</label>
    <type>Text</type>
</CustomField>