force-app/main/default/objects/Agreement__c/fields/NG_1st_Uplfit_Date__c.field-meta.xml
<CustomField>
    <fullName>NG_1st_Uplfit_Date__c</fullName>
    <label>NG 1st Uplfit Date</label>
    <type>Date</type>
</CustomField>