force-app/main/default/objects/Agreement__c/fields/NG_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>NG_Commencement_Date__c</fullName>
    <label>NG Commencement Date</label>
    <type>Date</type>
</CustomField>