force-app/main/default/objects/Agreement__c/fields/NG_Department__c.field-meta.xml
<CustomField>
    <fullName>NG_Department__c</fullName>
    <formula>IF(ISPICKVAL(Project__r.strk__Customer__c, &apos;AT&amp;T&apos;), &apos;AT&amp;T&apos;,
    IF(ISPICKVAL(Project__r.strk__Customer__c, &apos;Verizon Wireless&apos;), &apos;Verizon&apos;,
        IF(ISPICKVAL(Project__r.strk__Customer__c, &apos;Dish Networks&apos;), &apos;Dish Wireless&apos;,
            IF(ISPICKVAL(Project__r.strk__Customer__c, &apos;Sprint&apos;), &apos;Sprint/T-Mobile&apos;,
 IF(ISPICKVAL(Project__r.strk__Customer__c, &apos;T-Mobile&apos;), &apos;Sprint/T-Mobile&apos;,
                &apos;Other&apos;
            )
        )
    )
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NG Department**</label>
    <type>Text</type>
</CustomField>