force-app/main/default/objects/Agreement__c/fields/NG_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NG_End_Date__c</fullName>
    <label>NG End Date</label>
    <type>Date</type>
</CustomField>