force-app/main/default/objects/Agreement__c/fields/NG_Initial_Lease_Payment__c.field-meta.xml
<CustomField>
    <fullName>NG_Initial_Lease_Payment__c</fullName>
    <label>NG Initial Lease Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>