force-app/main/default/objects/Agreement__c/fields/NG_Landlord_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>NG_Landlord_Legal_Name__c</fullName>
    <label>NG Landlord Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>