force-app/main/default/objects/Agreement__c/fields/NG_Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>NG_Lease_Term__c</fullName>
    <label>NG Lease Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>