force-app/main/default/objects/Agreement__c/fields/NG_Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>NG_Lease_Type__c</fullName>
    <label>NG Lease Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>