force-app/main/default/objects/Agreement__c/fields/NG_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>NG_Legal_Entity__c</fullName>
    <label>NG Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>