force-app/main/default/objects/Agreement__c/fields/NG_Original_Rent_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>NG_Original_Rent_Commencement_Date__c</fullName>
    <label>NG Original Rent Commencement Date</label>
    <type>Date</type>
</CustomField>