force-app/main/default/objects/Agreement__c/fields/NG_Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>NG_Payee_Name__c</fullName>
    <label>NG Payee Name</label>
    <type>TextArea</type>
</CustomField>