force-app/main/default/objects/Agreement__c/fields/NG_Project__c.field-meta.xml
<CustomField>
    <fullName>NG_Project__c</fullName>
    <label>NG Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>