force-app/main/default/objects/Agreement__c/fields/NG_Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>NG_Renewal_Type__c</fullName>
    <label>NG Renewal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>