force-app/main/default/objects/Agreement__c/fields/NG_Rent_Abated__c.field-meta.xml
<CustomField>
    <fullName>NG_Rent_Abated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NG Rent Abated</label>
    <type>Checkbox</type>
</CustomField>