force-app/main/default/objects/Agreement__c/fields/NG_Revenue_Share__c.field-meta.xml
<CustomField>
    <fullName>NG_Revenue_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NG Revenue Share</label>
    <type>Checkbox</type>
</CustomField>