force-app/main/default/objects/Agreement__c/fields/NG_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>NG_Site_Name__c</fullName>
    <label>NG Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>