force-app/main/default/objects/Agreement__c/fields/NG_Subsidary__c.field-meta.xml
<CustomField>
    <fullName>NG_Subsidary__c</fullName>
    <label>NG Subsidary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>