force-app/main/default/objects/Agreement__c/fields/NG_Total_Renewals__c.field-meta.xml
<CustomField>
    <fullName>NG_Total_Renewals__c</fullName>
    <label>NG Total Renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>