force-app/main/default/objects/Agreement__c/fields/NG_Uplift_Frequency__c.field-meta.xml
<CustomField>
    <fullName>NG_Uplift_Frequency__c</fullName>
    <label>NG Uplift Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>