force-app/main/default/objects/Agreement__c/fields/NG_Uplift_Percentage__c.field-meta.xml
<CustomField>
    <fullName>NG_Uplift_Percentage__c</fullName>
    <label>NG Uplift Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>