force-app/main/default/objects/Agreement__c/fields/NG_URL__c.field-meta.xml
<CustomField>
    <fullName>NG_URL__c</fullName>
    <label>NG URL</label>
    <type>Url</type>
</CustomField>