force-app/main/default/objects/Agreement__c/fields/Note_Field__c.field-meta.xml
<CustomField>
    <fullName>Note_Field__c</fullName>
    <label>Note Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>