force-app/main/default/objects/Agreement__c/fields/NTP_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>NTP_Issued_Date__c</fullName>
    <label>NTP Issued Date</label>
    <type>Date</type>
</CustomField>