force-app/main/default/objects/Agreement__c/fields/Number_of_GLBO_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_GLBO_Payments__c</fullName>
    <label>Number of GLBO Payments</label>
    <length>3</length>
    <type>Text</type>
</CustomField>