force-app/main/default/objects/Agreement__c/fields/Number_of_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Renewals__c</fullName>
    <label>Number of Renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>