force-app/main/default/objects/Agreement__c/fields/of_Extension_Terms__c.field-meta.xml
<CustomField>
    <fullName>of_Extension_Terms__c</fullName>
    <label># of Extension Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>