force-app/main/default/objects/Agreement__c/fields/One_Time_Signing_Bonus_Expense__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Signing_Bonus_Expense__c</fullName>
    <label>One Time Signing Bonus - Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>