force-app/main/default/objects/Agreement__c/fields/Option_Excercise_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Excercise_Date__c</fullName>
    <label>Option Excercise Date</label>
    <type>Date</type>
</CustomField>