force-app/main/default/objects/Agreement__c/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <label>Origination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Harmoni Initiated Buyout</fullName>
            </value>
            <value>
                <fullName>Site Dev</fullName>
            </value>
            <value>
                <fullName>ROFR</fullName>
            </value>
            <value>
                <fullName>Harmoni Initiated used Vendor</fullName>
                <label>Harmoni Initiated Used Vendor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>