force-app/main/default/objects/Agreement__c/fields/OTF_Reason__c.field-meta.xml
<CustomField>
    <fullName>OTF_Reason__c</fullName>
    <label>OTF Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation Contribution</fullName>
            </value>
            <value>
                <fullName>Lessee Ready Notice Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>