force-app/main/default/objects/Agreement__c/fields/Other_Escalation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Escalation_Notes__c</fullName>
    <label>Other Escalation Notes</label>
    <type>TextArea</type>
</CustomField>