force-app/main/default/objects/Agreement__c/fields/Other_Fees__c.field-meta.xml
<CustomField>
    <fullName>Other_Fees__c</fullName>
    <label>Other Fees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>