force-app/main/default/objects/Agreement__c/fields/Other_Income_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Details__c</fullName>
    <label>Other - Income Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>