force-app/main/default/objects/Agreement__c/fields/Other_Recordings__c.field-meta.xml
<CustomField>
    <fullName>Other_Recordings__c</fullName>
    <label>Other Recordings</label>
    <type>TextArea</type>
</CustomField>