force-app/main/default/objects/Agreement__c/fields/Owned__c.field-meta.xml
<CustomField>
    <fullName>Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owned(TBD)</label>
    <type>Checkbox</type>
</CustomField>