force-app/main/default/objects/Agreement__c/fields/Pace_Date_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pace_Date_Notes__c</fullName>
    <label>Pace Date Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>