force-app/main/default/objects/Agreement__c/fields/Parent_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>RelatedAgreements</relationshipLabel>
    <relationshipName>Child_RelatedAgreements</relationshipName>
    <type>Lookup</type>
</CustomField>