force-app/main/default/objects/Agreement__c/fields/Parent_Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agreement_Name__c</fullName>
    <formula>Parent_Agreement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Agreement Name</label>
    <type>Text</type>
</CustomField>