force-app/main/default/objects/Agreement__c/fields/Parent_Agreement_Rent_Commence__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agreement_Rent_Commence__c</fullName>
    <formula>Parent_Agreement__r.Rent_Commencement_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent: Rent Commencement Date</label>
    <type>Date</type>
</CustomField>