force-app/main/default/objects/Agreement__c/fields/ParentNGInternalID__c.field-meta.xml
<CustomField>
    <fullName>ParentNGInternalID__c</fullName>
    <formula>Parent_Agreement__r.NetGain_Internal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentNGInternalID</label>
    <type>Text</type>
</CustomField>