force-app/main/default/objects/Agreement__c/fields/Partially_Executed_Received__c.field-meta.xml
<CustomField>
    <fullName>Partially_Executed_Received__c</fullName>
    <label>Partially Executed Received</label>
    <type>Date</type>
</CustomField>