force-app/main/default/objects/Agreement__c/fields/Pass_Through_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pass_Through_Base_Amount__c</fullName>
    <label>Pass Through Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>