force-app/main/default/objects/Agreement__c/fields/Pass_Through_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pass_Through_Notes__c</fullName>
    <label>Pass Through Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>