force-app/main/default/objects/Agreement__c/fields/Payment_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Commencement_Date__c</fullName>
    <label>Payment Commencement Date</label>
    <type>Date</type>
</CustomField>