force-app/main/default/objects/Agreement__c/fields/Payment_Date_A__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_A__c</fullName>
    <label>Payment Date (A)</label>
    <type>Date</type>
</CustomField>