force-app/main/default/objects/Agreement__c/fields/Payment_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_F__c</fullName>
    <label>Payment Date(F)</label>
    <type>Date</type>
</CustomField>