force-app/main/default/objects/Agreement__c/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <label>Payment Details</label>
    <type>TextArea</type>
</CustomField>