force-app/main/default/objects/Agreement__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency**</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Escalating every 12 months</fullName>
                <isActive>false</isActive>
                <label>Escalating every 12 months</label>
            </value>
            <value>
                <fullName>Escalating every 60 months</fullName>
                <isActive>false</isActive>
                <label>Escalating every 60 months</label>
            </value>
            <value>
                <fullName>Every 5 Years</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
                <isActive>false</isActive>
                <label>Installment</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
                <isActive>false</isActive>
                <label>Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>