force-app/main/default/objects/Agreement__c/fields/Payment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Notes__c</fullName>
    <label>Payment Notes(TBD)</label>
    <type>TextArea</type>
</CustomField>