force-app/main/default/objects/Agreement__c/fields/Payor_Name__c.field-meta.xml
<CustomField>
    <fullName>Payor_Name__c</fullName>
    <label>Payor Name(TBD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>