force-app/main/default/objects/Agreement__c/fields/Primary_Address_of_Site__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_of_Site__c</fullName>
    <label>TBD Primary Address of Site</label>
    <type>Address</type>
</CustomField>