force-app/main/default/objects/Agreement__c/fields/ProcessPaymentDateF__c.field-meta.xml
<CustomField>
    <fullName>ProcessPaymentDateF__c</fullName>
    <formula>if(  Payment_Date_F__c &lt;= Today(),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProcessPaymentDateF</label>
    <type>Checkbox</type>
</CustomField>