force-app/main/default/objects/Agreement__c/fields/ProcessRentCommencement__c.field-meta.xml
<CustomField>
    <fullName>ProcessRentCommencement__c</fullName>
    <formula>if( Rent_Commencement_Date__c &lt;= Today(),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProcessRentCommencement</label>
    <type>Checkbox</type>
</CustomField>