force-app/main/default/objects/Agreement__c/fields/Project_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Project_Acceptance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Acceptance(TBD)</label>
    <referenceTo>Project_Acceptance__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>