force-app/main/default/objects/Agreement__c/fields/Project_Management_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Director_Email__c</fullName>
    <label>Project Management Director Email</label>
    <type>Email</type>
</CustomField>