force-app/main/default/objects/Agreement__c/fields/ProjectID__c.field-meta.xml
<CustomField>
    <fullName>ProjectID__c</fullName>
    <formula>Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectID</label>
    <type>Text</type>
</CustomField>