force-app/main/default/objects/Agreement__c/fields/Purchase_Document_Fully_Executed__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Document_Fully_Executed__c</fullName>
    <label>Purchase Document Fully Executed</label>
    <type>Date</type>
</CustomField>