force-app/main/default/objects/Agreement__c/fields/Purchase_Fee__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Fee__c</fullName>
    <label>Purchase Fee TBD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>