force-app/main/default/objects/Agreement__c/fields/Purchase_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Multiple__c</fullName>
    <formula>if( X12_31_Annual_Rent_Savings__c != 0, (( Project__r.Purchase_Fee__c + Signing_Bonus__c ))/ X12_31_Annual_Rent_Savings__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Multiple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>