force-app/main/default/objects/Agreement__c/fields/Purchase_Notes__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Notes__c</fullName>
    <label>Purchase Notes</label>
    <type>TextArea</type>
</CustomField>