force-app/main/default/objects/Agreement__c/fields/Purchase_Rent_Annual_Savings__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Rent_Annual_Savings__c</fullName>
    <formula>Ground_Rent_at_Purchase__c*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Rent Annual Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>