force-app/main/default/objects/Agreement__c/fields/RECON_Approved__c.field-meta.xml
<CustomField>
    <fullName>RECON_Approved__c</fullName>
    <label>RECON Approved</label>
    <type>Date</type>
</CustomField>