force-app/main/default/objects/Agreement__c/fields/Recon_Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Recon_Base_Rent__c</fullName>
    <label>Recon Base Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>