force-app/main/default/objects/Agreement__c/fields/RECON_Capital_Investment__c.field-meta.xml
<CustomField>
    <fullName>RECON_Capital_Investment__c</fullName>
    <label>RECON Capital Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>