force-app/main/default/objects/Agreement__c/fields/Recon_Ground_Rent__c.field-meta.xml
<CustomField>
    <fullName>Recon_Ground_Rent__c</fullName>
    <label>Recon Ground Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>