force-app/main/default/objects/Agreement__c/fields/Recon_Indexed_Captial__c.field-meta.xml
<CustomField>
    <fullName>Recon_Indexed_Captial__c</fullName>
    <label>Recon Indexed Captial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>