force-app/main/default/objects/Agreement__c/fields/RECON_Submitted__c.field-meta.xml
<CustomField>
    <fullName>RECON_Submitted__c</fullName>
    <label>RECON Submitted</label>
    <type>Date</type>
</CustomField>