force-app/main/default/objects/Agreement__c/fields/Recorded_Internal_MOA__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Internal_MOA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorded Internal MOA</label>
    <type>Checkbox</type>
</CustomField>