force-app/main/default/objects/Agreement__c/fields/Recording_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recording_Notes__c</fullName>
    <label>Recording Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>