force-app/main/default/objects/Agreement__c/fields/Related_Agreement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Related_Agreement_Reason__c</fullName>
    <label>Related Agreement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Related_Agreement_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Change</fullName>
            </value>
            <value>
                <fullName>Microwave</fullName>
            </value>
            <value>
                <fullName>SDP Recon Amendment</fullName>
            </value>
            <value>
                <fullName>SDP Revision Amendment</fullName>
            </value>
            <value>
                <fullName>Zero Dollar</fullName>
            </value>
            <value>
                <fullName>Collocation Pass-Through</fullName>
            </value>
            <value>
                <fullName>Ground Rent Pass-Through</fullName>
            </value>
            <value>
                <fullName>Initial Facility User Fee</fullName>
            </value>
            <value>
                <fullName>Installment Payment</fullName>
            </value>
            <value>
                <fullName>Marketing Fee</fullName>
            </value>
            <value>
                <fullName>Non-Amendment Microwave Rent</fullName>
            </value>
            <value>
                <fullName>Office Rent</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Sublease Rev Share</fullName>
            </value>
            <value>
                <fullName>Utilities/Maintenance Fee</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Rent Reduction</fullName>
            </value>
            <value>
                <fullName>Signing Bonus</fullName>
            </value>
            <value>
                <fullName>Soft Costs</fullName>
            </value>
            <value>
                <fullName>Capital Contributions</fullName>
            </value>
            <value>
                <fullName>One Time Fee</fullName>
            </value>
            <value>
                <fullName>Easement</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ABM Bill of Sale</fullName>
            </value>
            <value>
                <fullName>Consent Letter</fullName>
            </value>
            <value>
                <fullName>Lease Premises</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Option/ Due Diligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>