force-app/main/default/objects/Agreement__c/fields/Related_Agreement_Reason_Other_Expl__c.field-meta.xml
<CustomField>
    <fullName>Related_Agreement_Reason_Other_Expl__c</fullName>
    <label>Related_Agreement Reason Other Expl.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>