force-app/main/default/objects/Agreement__c/fields/Related_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Agreement_Type__c</fullName>
    <label>Related Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agreement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access/Utility Easement</fullName>
            </value>
            <value>
                <fullName>Ground Lease Buyout</fullName>
            </value>
            <value>
                <fullName>Anchor Amendment</fullName>
            </value>
            <value>
                <fullName>Colocation Amendment</fullName>
            </value>
            <value>
                <fullName>Ground Amendment</fullName>
            </value>
            <value>
                <fullName>Anchor Payment Reason</fullName>
            </value>
            <value>
                <fullName>Colocation Payment Reason</fullName>
            </value>
            <value>
                <fullName>Ground Payment Reason</fullName>
            </value>
            <value>
                <fullName>SDP Revision/Version</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
                <isActive>false</isActive>
                <label>Amendment</label>
            </value>
            <value>
                <fullName>Payment Reason</fullName>
                <isActive>false</isActive>
                <label>Payment Reason</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>