force-app/main/default/objects/Agreement__c/fields/Related_Tenant_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Related_Tenant_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Tenant Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Related Agreements (Related Tenant Agreement)</relationshipLabel>
    <relationshipName>Related_Tenant_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>